fix AI to not be stuck on rock

--- a/styles.css
+++ b/styles.css
@@ -333,7 +333,7 @@ body {
 
 #lantern-viewer.visible {
   position: absolute;
-  top: 200px;
+  top: 225px;
   left: 400px;
   width: 260px;
   height: 100px;
